src/objects/Product2__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RefundObligation__c</fullName>
        <formula>OR(
TEXT(ServiceType__c)   = &apos;1&apos;,
TEXT(ServiceType__c)   = &apos;8&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>返金義務</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <label>サービス種別</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceYears__c</fullName>
        <label>サービス対象年数</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SplitTimes__c</fullName>
        <description>按分の按分回数の数式内で参照。</description>
        <inlineHelpText>按分の按分終了月を無視し、固定の按分回数を指定する場合に記入。</inlineHelpText>
        <label>按分回数</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>商品</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>ServiceType__c</columns>
        <columns>ServiceYears__c</columns>
        <columns>RefundObligation__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>商品名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>